# 3-python-package-exercise-moy

./: .pypric  README.md  pyproject.toml
pycard/: __init__.py  pycard.py
test/: testcards.py
tests/: testcards.py
