[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycard"
description = "An card game package developed with pyenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "0.1.0"
authors = [
  { name="jinqiaocheng163", email="joc297@nyu.edu" }, { name="YY35n", email="yy3401@nyu.edu" }, { name="Hmic1102", email="zh2033@nyu.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",      "Topic :: Games/Entertainment",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2024/3-python-package-exercise-moy"
"Repository" = "https://github.com/software-students-spring2024/3-python-package-exercise-moy.git"
"Bug Tracker" = "https://github.com/software-students-spring2024/3-python-package-exercise-moy/issues"

